--- a/nArmedBandit/nArmedBandit.csproj
+++ b/nArmedBandit/nArmedBandit.csproj
@@ -47,6 +47,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Backend\GameAbstract.cs" />
+    <Compile Include="Backend\GameRandom.cs" />
+    <Compile Include="Backend\RandomAbstract.cs" />
     <Compile Include="Backend\RandomNormal.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
