--- a/nArmedBandit/nArmedBandit.csproj
+++ b/nArmedBandit/nArmedBandit.csproj
@@ -46,10 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Backend\GameAbstract.cs" />
-    <Compile Include="Backend\GameRandom.cs" />
-    <Compile Include="Backend\RandomAbstract.cs" />
+    <Compile Include="Backend\Game.cs" />
+    <Compile Include="Backend\Action.cs" />
+    <Compile Include="Backend\ActionRandom.cs" />
+    <Compile Include="Backend\Random.cs" />
     <Compile Include="Backend\RandomNormal.cs" />
+    <Compile Include="Backend\Simulation.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
