--- a/nArmedBandit/nArmedBandit.csproj
+++ b/nArmedBandit/nArmedBandit.csproj
@@ -47,8 +47,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Backend\Game.cs" />
-    <Compile Include="Backend\Action.cs" />
-    <Compile Include="Backend\ActionRandom.cs" />
+    <Compile Include="Backend\GameAction.cs" />
+    <Compile Include="Backend\GameActionRandom.cs" />
     <Compile Include="Backend\RandomValue.cs" />
     <Compile Include="Backend\RandomValueNormal.cs" />
     <Compile Include="Backend\Selector.cs" />
@@ -63,6 +63,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
