--- a/nArmedBandit/nArmedBandit.csproj
+++ b/nArmedBandit/nArmedBandit.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Backend\RandomValueNormal.cs" />
     <Compile Include="Backend\Selector.cs" />
     <Compile Include="Backend\SelectorDynamic.cs" />
+    <Compile Include="Backend\SelectorGreedy.cs" />
     <Compile Include="Backend\SelectorRandom.cs" />
     <Compile Include="Backend\Simulation.cs" />
     <Compile Include="Form1.cs">
